syntax = "proto3";

option java_package = "ru.itis.hhagregator.gprc";
option java_multiple_files = true;

message ResumeRequest {
  optional string sorting = 1;
}

message SingleResumeResponse {
  string title = 1;
  string description = 2;
  string link = 3;
  string location = 4;
  string salary = 5;
  string experience = 6;
  string company = 7;
}

message ResumeListResponse {
  repeated SingleResumeResponse list = 1;
}

service ResumeService {

  rpc getResumeList(stream ResumeRequest) returns (stream ResumeListResponse);

}